--- a/package.json
+++ b/package.json
@@ -29,6 +29,13 @@
   },
   "dependencies": {
     "express": "^4.10.4",
+    "express-session": "~1.9.3",
+    "cookie-parser": "~1.3.3",
+    "body-parser": "~1.10.0",
+    "mongoose": "~3.8.20",
+    "connect-mongodb": "~1.1.5",
+    "passport": "*",
+    "passport-local": "*",
     "socket.io": "^1.2.1"
   }
 }
