--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-mocks": "~1.3.x",
     "angular-messages": "1.3.x",
     "html5-boilerplate": "~4.3.0",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "ngDraggable": "0.0.2"
   }
 }
