--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
   "dependencies": {
+    "body-parser": "~1.10.0",
+    "connect-mongodb": "~1.1.5",
+    "cookie-parser": "~1.3.3",
     "express": "^4.10.4",
     "express-session": "~1.9.3",
-    "cookie-parser": "~1.3.3",
-    "body-parser": "~1.10.0",
     "mongoose": "~3.8.20",
-    "connect-mongodb": "~1.1.5",
     "passport": "*",
     "passport-local": "*",
-    "socket.io": "^1.2.1"
+    "socket.io": "^1.2.1",
+    "underscore": "^1.7.0"
   }
 }
